# dev

./: .dev  .dockerignore  .gitignore  .shellspec  CLAUDE.md  COMMANDS.md  Dockerfile  README.md  action.yml  migrate.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
app/: dev.sh  docker-compose.network.yml
completions/: _dev  _mdev  dev.bash  mdev.bash
docs/: dev-commands.md  mdev-commands.md
images/bash/: .dev  Dockerfile
images/nginx/: .dev  Dockerfile
images/python/: .dev  Dockerfile
images/typescript/: .dev  Dockerfile
scripts/: format-entrypoint.sh  install.sh  uninstall.sh
skills/migrate-to-dev/: SKILL.md
spec/: build_spec.sh  check_spec.sh  config_spec.sh  coverage_spec.sh  db_spec.sh  down_spec.sh  e2e_spec.sh  exec_spec.sh  fmt_spec.sh  format_spec.sh  kcov-helper.sh  lint_spec.sh  login_spec.sh  logs_spec.sh  main_spec.sh  network_spec.sh  push_spec.sh  release_spec.sh  run_spec.sh  security_spec.sh  shell_spec.sh  spec_helper.sh  types_spec.sh  unit_spec.sh  up_spec.sh  watch_spec.sh
spec/support/: helpers.sh
src/app/: claude-format  claude-lint  claude-lint-dockerfile  dev.sh  docker-compose.e2e-network.yml  mdev.sh
src/app/init/python/tool/: Dockerfile.tmpl  pyproject.toml
src/app/init/python/tool/src/app/: hello.py
src/app/init/python/tool/src/tests/: test_hello.py
src/spec/: build_spec.sh  check_spec.sh  clean_spec.sh  config_spec.sh  coverage_spec.sh  db_spec.sh  down_spec.sh  e2e_spec.sh  exec_spec.sh  format_spec.sh  init_spec.sh  lint_spec.sh  lock_spec.sh  login_spec.sh  (+14 more)
(+48 files in other folders)
